# python-project-52

./: .gitignore  Makefile  README.md  build.sh  manage.py  pyproject.toml  requirements.txt  ruff.toml
Task_Manager/: settings.py  urls.py
Task_Manager/api/: apps.py  urls.py
Task_Manager/api/users_api/: serializers.py  urls.py
Task_Manager/labels/: apps.py  tests.py  urls.py  views.py
Task_Manager/labels/migrations/: 0001_initial.py
Task_Manager/labels/templates/: create_label.html  (+1 more)
Task_Manager/statuses/: apps.py  forms.py  tests.py  urls.py  views.py
Task_Manager/task_manager_main/: apps.py  forms.py  mixins.py  tests.py
Task_Manager/tasks/: apps.py  filter.py  forms.py  mixins.py  models.py  tests.py  urls.py  views.py
Task_Manager/users/: apps.py  forms.py  tests.py  urls.py  views.py
task_manager/: settings.py  urls.py  views.py
task_manager/api/: urls.py
task_manager/labels/: forms.py  tests.py  urls.py  views.py
task_manager/statuses/: forms.py  tests.py  urls.py  views.py
task_manager/task_manager_main/: urls.py  views.py
task_manager/tasks/: filter.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tests/: base_test_case.py
task_manager/users/: forms.py  mixins.py  models.py  tests.py  urls.py  views.py
templates/: create_update_form.html  index.html
templates/labels/: create_label.html  update_label.html
templates/statuses/: create_status.html  statuses.html  update_status.html
templates/tasks/: create_task.html  detail_task.html  update_task.html
templates/users/: create.html  delete.html  update.html
(+37 files in other folders)
