[tool.poetry]
name = "Task_Manager"
version = "0.1.0"
description = "Task Manager"
authors = ["AntiViruS90 <131804906+AntiViruS90@users.noreply.github.com>"]
readme = "README.md"
packages = [
    {include = "Task_Manager"}
]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.5"
djangorestframework = "^3.15.2"
django-filter = "^24.3"
gunicorn = "^23.0.0"
unicorn = "^2.1.1"
python-dotenv = "^1.0.1"
dj-database-url = "^2.3.0"
django-bootstrap5 = "^24.3"
psycopg2-binary = "^2.9.10"
rollbar = "^1.1.1"



[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
ruff = "^0.9.2"
coverage = "^7.6.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
